2007-05-03  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Kevin.

        <rdar://problem/5016318> Contextual menu item for opening links is missing in compose windows but present in viewer

        Add the Open Link, Open Link in New Window, Download Linked File and Copy Link menu
        items to the content editable context menu.

        * platform/ContextMenu.cpp:
        (WebCore::ContextMenu::populate):

2007-05-03  Holger Freyther <freyther@kde.org>

        Reviewed by Zack, landed by Simon.
        This is bugzilla bug 13499.

        * WebCore.pro: Place the Qt port into the qt-port scope, add the Gdk port

2007-05-03  Adele Peterson  <adele@apple.com>

        Use BUILDING_ON_TIGER.

        * page/mac/FrameMac.mm: (WebCore::Frame::setUseSecureKeyboardEntry):

2007-05-03  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin

        Some more minor cleanup that resolves a FIXME and ditches another pointless method

        No change in functionality == no layout test

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::commitProvisionalLoad):  Updated a comment
        (WebCore::FrameLoader::continueLoadAfterWillSubmitForm): Folded startLoading() into this method
        (WebCore::FrameLoader::continueLoadAfterNavigationPolicy): continueAfterWillSubmitForm becomes continueLoadAfterWillSubmitForm
        * loader/FrameLoader.h: Removed startLoading()

2007-05-03  Adele Peterson  <adele@apple.com>

        Reviewed by Tim Hatcher.

        Fix for <rdar://problem/4727607> REGRESSION: KeyScript is deprecated, need a new solution for forcing Roman input for password fields on Leopard

        * page/mac/FrameMac.mm: (WebCore::Frame::setUseSecureKeyboardEntry):
        Use TSMSetDocumentProperty and TSMRemoveDocumentProperty on Leopard disable and enable non-ascii input sources.

2007-05-03  Brady Eidson  <beidson@apple.com>

        Reviewed by Anders

        commitProvisionalLoad() was the name of two methods.