@@ -533,10 +533,12 @@ DeprecatedString createMarkup(const Range *range, Vector<Node*>* nodes, EAnnotat
     }
     
     Node* checkAncestor = specialCommonAncestor ? specialCommonAncestor : commonAncestor;
-    RefPtr<CSSMutableStyleDeclaration> checkAncestorStyle = computedStyle(checkAncestor)->copyInheritableProperties();
-    if (!propertyMissingOrEqualToNone(checkAncestorStyle.get(), CSS_PROP__WEBKIT_TEXT_DECORATIONS_IN_EFFECT))
-        specialCommonAncestor = elementHasTextDecorationProperty(checkAncestor) ? checkAncestor : enclosingNodeOfType(checkAncestor, &elementHasTextDecorationProperty);
-        
+    if (checkAncestor->renderer()) {
+        RefPtr<CSSMutableStyleDeclaration> checkAncestorStyle = computedStyle(checkAncestor)->copyInheritableProperties();
+        if (!propertyMissingOrEqualToNone(checkAncestorStyle.get(), CSS_PROP__WEBKIT_TEXT_DECORATIONS_IN_EFFECT))
+            specialCommonAncestor = elementHasTextDecorationProperty(checkAncestor) ? checkAncestor : enclosingNodeOfType(checkAncestor, &elementHasTextDecorationProperty);
+    }
+    
     if (Node *enclosingAnchor = enclosingNodeWithTag(specialCommonAncestor ? specialCommonAncestor : commonAncestor, aTag))
         specialCommonAncestor = enclosingAnchor;
     
@@ -578,7 +580,8 @@ DeprecatedString createMarkup(const Range *range, Vector<Node*>* nodes, EAnnotat
     }
     
     // Add a wrapper span with the styles that all of the nodes in the markup inherit.
-    if (Node* parentOfLastClosed = lastClosed->parentNode()) {
+    Node* parentOfLastClosed = lastClosed ? lastClosed->parentNode() : 0;
+    if (parentOfLastClosed && parentOfLastClosed->renderer()) {
         RefPtr<CSSMutableStyleDeclaration> style = computedStyle(parentOfLastClosed)->copyInheritableProperties();
         // Styles that Mail blockquotes contribute should only be placed on the Mail blockquote, to help
         // us differentiate those styles from ones that the user has applied.  This helps us
@@ -600,7 +603,7 @@ DeprecatedString createMarkup(const Range *range, Vector<Node*>* nodes, EAnnotat
                                        isStartOfParagraph(visibleStart) && isEndOfParagraph(visibleEnd);
                                       
     // Retain the Mail quote level by including all ancestor mail block quotes.
-    if (annotate && selectedOneOrMoreParagraphs) {
+    if (lastClosed && annotate && selectedOneOrMoreParagraphs) {
         for (Node *ancestor = lastClosed->parentNode(); ancestor; ancestor = ancestor->parentNode()) {
             if (isMailBlockquote(ancestor)) {
                 markups.prepend(startMarkup(ancestor, range, annotate));
